Mengupdate kontrak api, menggunakan fetch data dari database, menambahkan gambar di category
