# service/order_service.go
@@ -12,5 +12,6 @@ type OrderService interface {
 	FindAll(ctx context.Context) ([]dto.OrderResponse, error)
 	FindByID(ctx context.Context, id uuid.UUID) (dto.OrderResponse, error)
 	UpdateStatus(ctx context.Context, id uuid.UUID, status string) (dto.OrderResponse, error)
+	CancelOrder(ctx context.Context, id uuid.UUID) error
 	HandleMidtransWebhook(ctx context.Context, payload map[string]interface{}) error
 }
